# matf-miona-kodovi

./: .gitignore  10.c  14.c  15.c  16.c  17.c  2.c  3.c  6.c  7.c  8.c  9.c  README.md  q
alati_za_razvoj_softvera/cmake/primer_02/: CMakeLists.txt  main.cpp
alati_za_razvoj_softvera/cmake/primer_03/: CMakeLists.txt
alati_za_razvoj_softvera/cmake/primer_04/: CMakeLists.txt  stringLib.cpp
alati_za_razvoj_softvera/cmake/primer_05/stringLib/: CMakeLists.txt
alati_za_razvoj_softvera/cmake/primer_06/: CMakeLists.txt  coverage.sh
alati_za_razvoj_softvera/cmake/primer_06/src/: main.cpp
alati_za_razvoj_softvera/cmake/primer_06/stringLib/: CMakeLists.txt
alati_za_razvoj_softvera/docker/primer_05/code/: CMakeLists.txt  Dockerfile
alati_za_razvoj_softvera/docker/primer_05/code/stringLib/: CMakeLists.txt  stringLib.hpp  test.cpp
alati_za_razvoj_softvera/gdb/primer_08/solution/: CMakeLists.txt  Dockerfile  Point.cpp  k_means.cpp  k_means.hpp  tests.cpp
alati_za_razvoj_softvera/projekat/: README.md
funkcionalno_programiranje/cas01/: 1.hs  ring.hs  ring1.hs  ring2.hs
funkcionalno_programiranje/cas02/: ring1.hs  ring2.hs
funkcionalno_programiranje/cas03/: bool.hs  customList.hs  pets.hs  shapes.hs
funkcionalno_programiranje/cas04/: applicatives.hs  functors.hs
funkcionalno_programiranje/cas05/: alternatives.hs  monads.hs
funkcionalno_programiranje/cas06/: word_count.hs  word_count_hashmap.hs
istrazivanje_podataka_1/cas01/: zadatak1.str
istrazivanje_podataka_1/cas02/: 1.ipynb  zadatak1.str
istrazivanje_podataka_1/cas03/: 1.ipynb
istrazivanje_podataka_1/cas04/: 2.ipynb  DecisionTree.pkl  GeneratedModels.gen  SPSS_klasifikacija_mi22133.html  zadatak1.str-
istrazivanje_podataka_1/cas05/: 1.ipynb  GeneratedModels.gen  Stream1.str  Stream1.str-
istrazivanje_podataka_1/cas06/: 1.ipynb
istrazivanje_podataka_1/cas07/: 1.ipynb  GeneratedModels.gen  Stream1.str  Stream1.str-
istrazivanje_podataka_1/cas08/: 1.ipynb  GeneratedModels.gen  Stream1.str
istrazivanje_podataka_1/cas09/: 1.ipynb
istrazivanje_podataka_1/cas1/: output.csv  zadatak1.str
istrazivanje_podataka_1/cas10/: 1.ipynb
istrazivanje_podataka_1/cas11/: 1.ipynb  GeneratedModels.gen  Stream1.str
istrazivanje_podataka_1/cas12/: 1.ipynb  GeneratedModels.gen  zadatak1.str  zadatak2.str  zadatak2.str-
istrazivanje_podataka_1/cas3/: zadatak1.str  zadatak1.str-
istrazivanje_podataka_1/cas4/: 1.ipynb  2.ipynb  klasifikacija.csv  zadatak1.str
istrazivanje_podataka_1/cas6/: 1.ipynb  2.ipynb
istrazivanje_podataka_1/cas7/: 1.ipynb
istrazivanje_podataka_1/cas9/: 1.ipynb
istrazivanje_podataka_1/jun1_2024/: 1.ipynb  2.ipynb  GeneratedModels.gen  Stream1.str
istrazivanje_podataka_1/sep1_2022/: 1.ipynb  GeneratedModels.gen  Stream1.str  Stream1.str-
istrazivanje_podataka_1/sep1_2024/: 1.ipynb  2.ipynb  Analysis of [inflated].html  GeneratedModels.gen  Stream1.str  Stream1.str-
operativni_sistemi/ostalo/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  3.txt  30.c  31.c  32.c  33.c  34.c  35.c  36.c  37.c  38.c  39.c  4.c  40.c  41.c  5.c  6.c  7.c  8.c  (+1 more)
operativni_sistemi/rokovi/: 2017_jan1_1.c  2017_jan1_1vr2.c  2017_jan1_2.c  2017_jan1_3.c  2017_jan1_4.c  2017_jan1_5.c  2017_jun1_2.c  2017_jun1_3.c  2017_jun1_4.c  2017_jun1_5.c  2017_jun2_2.c  2017_jun2_3.c  2017_jun2_5.c  2017_sep1_1.c  2017_sep1_2.c  2017_sep1_4.c  2017_sep1_5.c  2017_sep2_1.c  2017_sep2_2.c  2017_sep2_3.c  2017_sep2_4.c  2018_jan1_2.c  2018_jan1_3.c  2018_jan1_5.c  2018_jan2_1.c  2018_jan2_2.c  2018_jan2_3.c  2018_jan2_5.c  2018_jun1_2.c  2018_jun1_3.c  2018_jun1_4.c  2018_sep1_1.c  2018_sep1_2.c  2018_sep1_3.c  2018_sep1_5.c  2019_jan1_1.c  2019_jan1_2.c  2019_jan1_3.c  2019_jan1_4.c  2019_jan1_5.c  (+42 more)
osnove_matematickog_modeliranja/: klatno.m
osnove_matematickog_modeliranja/seminarski/: main.m
prevodjenje_programskih_jezika/januar_1_2024/: Makefile  Makefile_1  lexer.l  lexer_1.l  parser.ypp  parser_1.ypp  stablo.cpp  stablo.hpp  tablicaSimbola.cpp  tablicaSimbola.hpp  test_1.txt
prevodjenje_programskih_jezika/januar_2_2024/: Makefile  Makefile_1  lexer.l  lexer_1.l  parser.ypp  parser_1.ypp  stablo.cpp  stablo.hpp  tabela.cpp  tabela.hpp  test_1.txt
primena_projektivne_geometrije_u_racunarstvu/: domaci1.ipynb  domaci2.ipynb  domaci3.ipynb  domaci4.ipynb  domaci5.ipynb  linkovi za domaci.txt
programiranje_2/: 1.c  11.c  12.c  13.c  18.c  19.c  4.c  5.c
programske_paradigme/: 1.2.py  1.23.py  1.27.py  1.3.py  1.30.py  1.31.py  1.32.py  1.33.py  1.34.py  1.35.py  1.36.py  1.37.py  1.39.py  1.4.py  1.40.py  1.41.py  1.43.py  1.5.py  1.7.py  1.9.py  tacke.json
programske_paradigme/Haskel/: 5.1.hs  5.10.hs  5.11.hs  5.12.hs  5.13.hs  5.14.hs  5.15.hs  5.16.hs  5.17.hs  5.18.hs  5.19.hs  5.2.hs  5.20.hs  5.21.hs  5.22.hs  5.23.hs  5.24.hs  5.25.hs  5.26.hs  5.27.hs  5.28.hs  5.29.hs  5.3.hs  5.30.hs  5.31.hs  5.32.hs  5.33.hs  5.34.hs  5.35.hs  5.36.hs  5.37.hs  5.38.hs  5.39.hs  5.4.hs  5.40.hs  5.41.hs  5.42.hs  5.43.hs  5.44.hs  5.45.hs  (+35 more)
programske_paradigme/Prolog/: 8.1.pl  8.11.pl  8.12.pl  8.17.pl  8.18.pl  8.19.pl  8.20.pl  8.21.pl  8.22.pl  8.23.pl  8.24.pl  8.25.pl  8.28.pl  8.29.pl  8.30.pl  8.31.pl  8.32.pl  8.33.pl  8.34.pl  8.35.pl  8.36.pl  8.37.pl  8.38.pl  8.39.pl  8.4.pl  8.40.pl  8.5.pl  8.6.pl  8.7.pl  8.8.pl  8.9.pl  9.11.pl  9.18.pl  9.19.pl  9.2.pl  9.20.pl  9.3.pl  9.4.pl  (+6 more)
(+2558 files in other folders)
